new files login, logout and new client app

--- a/bank/templates/bank/index.html
+++ b/bank/templates/bank/index.html
@@ -24,6 +24,7 @@
         {% endfor %}
         <tr><td colspan="4"><hr /></td></tr>
         <tr>
+            <td><a href='/accounts/logout'>Logout</a></td>
             <td><a href='/account/addaccount'>New account</a></td>
             <td></td>
             <td></td>
