--- a/bank/templates/bank/logout.html
+++ b/bank/templates/bank/logout.html
@@ -6,5 +6,5 @@
 {% block content %}
     <h1>Logout user</h1>
     You are logout of the application.
-    <a href='{% url 'index' %}'>Go to login</a>
+    <a class="btn btn-primary" href='{% url 'index' %}'>Go to login</a>
 {% endblock %}
