--- a/client/templates/client/registration.html
+++ b/client/templates/client/registration.html
@@ -1,17 +1,22 @@
 {% extends "client/base.html" %}
+{% load url from future %}
+
 {% block title %}Registration of the new client{% endblock %}
 {% block content %}
     <h1>Registration</h1>
     {% if form.errors %}
-    <p class='red'>
+    <p class="alert-error">
         Please correct the error{{ form.errors|pluralize }} below.
     </p>
     {% endif %} 
-    <form action='' method='post'>
+    <form class="form-horizontal" action="" method="post">
         <table>
             {{form.as_table}}
             {% csrf_token %}
         </table>
-        <input type="submit" value="Check in" />
+        <div class="form-actions">
+            <input class="btn btn-primary" type="submit" value="Check in" />
+            <input class="btn" type="reset" href='{% url 'registration' %}' value="Cancelar" />
+        </div>
     </form>
 {% endblock %}
