--- a/bank/templates/bank/login.html
+++ b/bank/templates/bank/login.html
@@ -6,7 +6,7 @@
 {% block content %}
     <h1>Login user</h1>
     {% if form.errors %}
-    <p>Your username and password didn't match.<br />Please try again.</p>
+    <p class="alert-error">Your username and password didn't match.<br />Please try again.</p>
     {% endif %}
     
     <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
@@ -21,9 +21,10 @@
             <td>{{ form.password }}</td>
         </tr>
     </table>
-    
-    <input type="submit" value="login" />
-    <a href='registration'>Registration</a>
-    <input type="hidden" name="next" value="{{ next }}" />
+    <div class="form-actions">
+        <input class="btn btn-primary" type="submit" value="login" />
+        <input class="btn" onclick='{% url 'registration' %}' value="Registration" />
+        <input type="hidden" name="next" value="{{ next }}" />
+    </div>
     </form>
 {% endblock %}
