edit img folder

--- a/bank/templates/bank/account.html
+++ b/bank/templates/bank/account.html
@@ -34,7 +34,7 @@
             {% endif %}
             <td>
                 <a class="btn btn-danger" href='{% url delnote account.id note.id %}'>
-                    <i class="icon-trash icon-white"></i>" Delete note"              
+                    <i class="icon-trash icon-white"></i> Delete note            
                 </a>
             </td>            
         </tr>            
