--- a/bank/templates/bank/base.html
+++ b/bank/templates/bank/base.html
@@ -5,7 +5,7 @@
         <title>{% block title %}My Money{% endblock %}</title>
         <meta name="description" content="My first django project">
         <meta name="author" content="Belatona">
-    <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap.min.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css" type="text/css" charset="utf-8">
     </head>
     <body>
         <div class="container">
