--- a/bank/templates/bank/logout.html
+++ b/bank/templates/bank/logout.html
@@ -4,7 +4,7 @@
 {% block title %}Logout{% endblock %}
 
 {% block content %}
-    <h1>Logout user</h1>
-    You are logout of the application.
-    <a class="btn btn-primary" href='{% url 'index' %}'>Go to login</a>
+<h1>Logout user</h1>
+You are logout of the application.
+<a class="btn btn-primary" href="{% url 'index' %}">Go to login</a>
 {% endblock %}
