--- a/bank/templates/bank/account.html
+++ b/bank/templates/bank/account.html
@@ -1,54 +1,58 @@
 {% extends "bank/base.html" %}
+{% load pagination_tags %}
 {% block title %}Account{% endblock %}
 {% block content %}
-    <br />
-    <h1>Notes</h1>
-    <br />
-    <div>        
-        <form class="well form-search span5" action="" method="get">
-            <label>Look up note:</label>
-            <input id="q" type="text" name="q" class="input-medium search-query" />
-            <input class="btn" type="submit" value="Go" />
-        </form>        
-    <div> 
-    <br />
-    <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Category</th>
-            <th>Description</th>
-            <th>Amount</th>
-            <th></th>
-        </tr>
-        </thead>
-        {% for note in notes %}
-        <tr>
-            <td>{{ note.timestamp|date:"d-m-Y" }}</td>                
-            <td>{{ note.category }}</td>
-            <td>{{ note.description }}</td>            
-            {% if note.is_expense %}
-            <td class="alert-error">{{ note.amount }}€</td>
-            {% else %}
-            <td class="alert-success">{{ note.amount }}€</td>
-            {% endif %}
-            <td>
-                <a class="btn btn-danger" href='{% url delnote account.id note.id %}'>
-                    <i class="icon-trash icon-white"></i> Delete note            
-                </a>
-            </td>            
-        </tr>            
-        {% endfor %}
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td><strong>Total</strong></td> 
-            <td>{{ total }}€</td>
-        </tr>
-    </table>
-    <a class="btn btn-primary" href='/'>Go to accounts</a>
-    <a class="btn btn-primary" href='{% url addnote account.id %}'>New note</a>
-    <br />
-    <br />
+<br/>
+<h1>Notes</h1>
+<br/>
+<div>
+    <form class="well form-search span5" action="" method="get">
+        <label>Look up note:</label>
+        <input id="q" type="text" name="q" class="input-medium search-query"/>
+        <input class="btn" type="submit" value="Go"/>
+    </form>
+    <div>
+        <br/>
+        <table class="table table-striped table-bordered table-condensed">
+            <thead>
+            <tr>
+                <th>Date</th>
+                <th>Category</th>
+                <th>Description</th>
+                <th>Amount</th>
+                <th></th>
+            </tr>
+            </thead>
+            {% autopaginate notes 5 %}
+            {% for note in notes %}
+            <tr>
+                <td class="W90">{{ note.timestamp|date:"d-m-Y" }}</td>
+                <td class="W100">{{ note.category }}</td>
+                <td class="W120">{{ note.description }}</td>
+                {% if note.is_expense %}
+                <td class="alert-error">{{ note.amount }}€</td>
+                {% else %}
+                <td class="alert-success">{{ note.amount }}€</td>
+                {% endif %}
+                <td style="width:30px;">
+                    <a class="btn btn-danger" href='{% url delnote account.id note.id %}'>
+                        <i class="icon-trash icon-white"></i>
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <td colspan="2"></td>
+                <td><strong>Total</strong></td>
+                <td>{{ total }}€</td>
+                <td></td>
+            </tr>
+        </table>
+        <div class="pagination-centered">{% paginate %}</div>
+        <a class="btn btn-primary" href='/'>Go to accounts</a>
+        <a class="btn btn-primary" href='{% url addnote account.id %}'>New note</a>
+        <br/>
+        <br/>
+    </div>
+</div>
 {% endblock %}
