--- a/bank/templates/bank/addaccount.html
+++ b/bank/templates/bank/addaccount.html
@@ -3,20 +3,20 @@
 
 {% block title %}Add account{% endblock %}
 {% block content %}
-    <h1>New account</h1>
-    {% if form.errors %}
-    <p class="alert-error">
-        Please correct the error{{ form.errors|pluralize }} below.
-    </p>
-    {% endif %} 
-    <form class="form-horizontal" action="" method="post">
-        <table>
-            {{form.as_table}}
-            {% csrf_token %}
-        </table>
-        <div class="form-actions">
-            <input class="btn btn-primary" type="submit" value="Add" />
-            <input class="btn" type="reset" onclick='{% url 'index' %}' value="Cancelar" />
-        </div>
-    </form>
+<h1>New account</h1>
+{% if form.errors %}
+<p class="alert-error">
+    Please correct the error{{ form.errors|pluralize }} below.
+</p>
+{% endif %}
+<form class="form-horizontal" action="" method="post">
+    <table>
+        {{form.as_table}}
+        {% csrf_token %}
+    </table>
+    <div class="form-actions">
+        <input class="btn btn-primary" type="submit" value="Add" />
+        <input class="btn" type="reset" onclick="{% url 'index' %}" value="Cancelar" />
+    </div>
+</form>
 {% endblock %}
